feat: add Video Game by Lana del Rey

--- a/guitar-book.tex
+++ b/guitar-book.tex
@@ -5,7 +5,7 @@
 \usepackage{blindtext}
 \usepackage{datetime2}
 \usepackage{array}
-\usepackage[margin=2cm]{geometry}
+\usepackage[left=2cm, right=2cm, top=1cm, bottom=2cm]{geometry}
 
 % Redefine \chord as \gchord
 \let\gchord\chord
@@ -106,7 +106,10 @@
 
 \subsection{B Chords}
 
-No chords yet.
+\mediumchords{
+	\gchord{0 t}{x,f1p2,f2p4,f3p4,f4p4,f1p2}{B}
+	\gchord{0 t}{x,f1p2,f3p4,f4p4,f2p3,f1p2}{Bm}
+}
 
 \pagebreak
 
@@ -288,6 +291,124 @@ No chords yet.
 		Free ^fall- ^in', ^... ^... ^...
 	\end{chorus}
 
+\end{song}
+
+\begin{song}[verse/numbered]{title=Video Games, band=Lana Del Rey, tempo=62 BPM}
+	\begin{center}
+		\begin{tabular}{cccc}
+			$\downarrow$ & $\downarrow$ & $\downarrow$ & $\downarrow$ \\
+			1            & 2            & 3            & 4            \\
+		\end{tabular}
+	\end{center}
+
+	\begin{intro}
+		_{Em} _{G} _{Em} _{G} _{Bm} _{C} \\
+		_{Em} _{G} _{Em} _{G} _{Bm} _{C}
+	\end{intro}
+
+	\begin{verse}
+		^{Em}Swinging in the ^{G}backyard \\
+		^{Em}Pull up in your ^{G}fast car \\
+		^{Bm}Whistling my ^{C}name
+	\end{verse}
+	\begin{verse}
+		^{Em}Open up a ^Gbeer \\
+		^{Em}And you ^{Em}take it over ^Ghere \\
+		And play a ^{Bm}video ^{C}game
+	\end{verse}
+
+	\begin{verse}
+		I'm ^{Em}in his favorite ^Gsun dress \\
+		^{Em}Watching me get ^Gundressed \\
+		^{Bm}Take that body ^Cdowntown
+	\end{verse}
+
+	\begin{verse}
+		^{Em}I say you the ^Gbestest \\
+		^{Em}Lean in for a ^Gbig kiss \\
+		^{Bm}Put his favorite ^Cperfume ^{Em}on \\
+		Go play a ^{Bm}video ^{C}game
+	\end{verse}
+
+	\begin{chorus}
+		^{D}It's you, it's you, it's all for you \\
+		Everything I do \\
+		I tell you all the ^{C}time \\
+		Heaven is a place on earth with ^{G}you \\
+		Tell me all the things you ^Fwant to ^{Em}do \\
+		I heard that you like the bad girls \\
+		^{C}Honey, is that true? \\
+		It's better than I ever even ^{G}knew \\
+		They say that the world was ^Fbuilt for ^{Em}two \\
+		Only worth living if some- ^Cbody is loving ^{Cm}you \\
+		Baby now you ^{Em}do
+	\end{chorus}
+
+	\begin{interlude}
+		_{Em} _{G} _{Em} _{G} _{Bm} _{C}
+	\end{interlude}
+
+	\begin{verse}
+		^{Em}Singing in the ^Gold bars \\
+		^{Em}Swinging with the ^Gold stars \\
+		^{Bm}Living for the ^Cfame
+	\end{verse}
+
+	\begin{verse}
+		^{Em}Kissing in the ^Gblue dark \\
+		^{Em}Playing pool and ^Gwild darts \\
+		^{Bm}Video ^{C}games
+	\end{verse}
+
+	\begin{verse}
+		He ^{Em}holds me in his ^Gbig arms \\
+		^{Em}Drunk and I am ^Gseeing stars \\
+		^{Bm}This is all I ^Cthink of
+	\end{verse}
+
+	\begin{verse}
+		^{Em}Watching all our ^Gfriends fall \\
+		^{Em}In and out of ^GOld Paul's \\
+		^{Bm}This is my ^Cidea of ^{Em}fun \\
+		Playing ^{Bm}video ^{C}games
+	\end{verse}
+
+	\begin{chorus}
+		^{D}It's you, it's you, it's all for you \\
+		Everything I do \\
+		I tell you all the ^{C}time \\
+		Heaven is a place on earth with ^{G}you \\
+		Tell me all the things you ^Fwant to ^{Em}do \\
+		I heard that you like the bad girls \\
+		^{C}Honey, is that true? \\
+		It's better than I ever even ^{G}knew \\
+		They say that the world was ^Fbuilt for ^{Em}two \\
+		Only worth living if some- ^Cbody is loving ^{Cm}you \\
+		Baby now you ^{Em}do
+	\end{chorus}
+
+	\begin{interlude}
+		^{G}Now you ^{Em}do, ^G{} now you ^{Bm}do, ^{C}{} now you do.
+	\end{interlude}
+
+	\begin{chorus}
+		^{D}It's you, it's you, it's all for you \\
+		Everything I do \\
+		I tell you all the ^{C}time \\
+		Heaven is a place on earth with ^{G}you \\
+		Tell me all the things you ^Fwant to ^{Em}do \\
+		I heard that you like the bad girls \\
+		^{C}Honey, is that true? \\
+		It's better than I ever even ^{G}knew \\
+		They say that the world was ^Fbuilt for ^{Em}two \\
+		Only worth living if some- ^Cbody is loving ^{Cm}you \\
+		Baby now you ^{Em}do
+	\end{chorus}
+
+	\begin{interlude}
+		^{G}Now you ^{Em}do, ^G{} now you ^{Bm}do, ^{C}{} now you do. \\
+		^{G}Now you ^{Em}do, ^G{} now you ^{Bm}do, ^{C}{} now you do.
+	\end{interlude}
 \end{song}
 
 \end{document}
