feat: add RHCP - Otherside

--- a/guitar-book.tex
+++ b/guitar-book.tex
@@ -231,6 +231,7 @@
 	\end{outro}
 
 \end{song}
+\pagebreak
 
 \begin{song}[verse/numbered,remember-chords]{title=Free Fallin', band=Tom Petty}
 	\begin{center}
@@ -292,6 +293,7 @@
 	\end{chorus}
 
 \end{song}
+\pagebreak
 
 \begin{song}[verse/numbered]{title=Video Games, band=Lana Del Rey, tempo=62 BPM}
 	\begin{center}
@@ -409,6 +411,120 @@
 		^{G}Now you ^{Em}do, ^G{} now you ^{Bm}do, ^{C}{} now you do. \\
 		^{G}Now you ^{Em}do, ^G{} now you ^{Bm}do, ^{C}{} now you do.
 	\end{interlude}
+\end{song}
+\pagebreak
+
+\begin{song}[verse/numbered]{title=Otherside, band=Red Hot Chili Peppers, tempo=120 BPM, key=Am}
+	\begin{center}
+		Main pattern \\
+		\begin{tabular}{cccccccc}
+			% Dx, Du, xu, Du
+			$\downarrow$ & $\quad$ & $\downarrow$ & $\uparrow$ & $\quad$ & $\uparrow$ & $\downarrow$ & $\uparrow$ \\
+			1            & \&      & 2            & \&         & 3       & \&         & 4            & \&         \\
+		\end{tabular} \\
+
+	\end{center}
+	\begin{center}
+		Chorus pattern                                                                               \\
+		\begin{tabular}{cccccccc}
+			% D-, -D, --, D-
+			$\downarrow$ & $\quad$ & $\quad$ & $\downarrow$ & $\quad$ & $\quad$ & $\downarrow$ & $\quad$ \\
+			1            & \&      & 2       & \&           & 3       & \&      & 4            & \&      \\
+		\end{tabular} \\
+
+	\end{center}
+	\begin{center}
+		Instrumental pattern \\
+		\begin{tabular}{cccccccc}
+			$\downarrow$ & $\quad$ & $\downarrow$ & $\quad$ & $\downarrow$ & $\uparrow$ & $\quad$ & $\uparrow$ \\
+			1            & \&      & 2            & \&      & 3            & \&         & 4       & \&         \\
+		\end{tabular} \\
+
+		* = Play 2x
+	\end{center}
+
+	\begin{intro}
+		_{Am} _{F} _{C} _{G}
+	\end{intro}
+
+	\begin{chorus}
+		^{Am}{ } How long, how ^{F}long will I ^{C}slide? \\
+		^{G}Separate my ^{Am}si- ^{F}-ide \\
+		I ^{C}don't, ^{G}don't believe it's ^{Am}ba ^{F}d \\
+		^{C}Slittin' my throat, it's ^{G}all I ever
+	\end{chorus}
+
+	\begin{verse}
+		^{Am}{ } I heard your voice through a ^{Em}photograph \\
+		^{Am}{ } I thought it up and brought ^{Em}up the past \\
+		^{Am}{ } Once you know you can ^{Em}never go back \\
+		I've got to ^{G}take it on the ^{A*}otherside
+	\end{verse}
+
+	\begin{verse}
+		^{Am}{ } Centuries are what it ^{Em}meant to me \\
+		^{Am}{ } A cemetery where I ^{Em}marry the sea \\
+		^{Am}{ } Stranger things could never ^{Em}change my mind \\
+		I've got to ^{G}take it on the ^{A}otherside \\
+		^{G}Take it on the ^{A}otherside \\
+		^{G*}Take it on, ^{A*}take it on \\
+	\end{verse}
+
+	\begin{chorus}
+		^{Am}{ } How long, how ^{F}long wil I ^{C}slide? \\
+		^{G}Separate my ^{Am}si- ^{F}-ide \\
+		I ^{C}don't, ^{G}don't believe it's ^{Am}ba ^{F}d \\
+		^{C}Slittin' my throat, it's ^{G}all I ever
+	\end{chorus}
+
+	\begin{verse}
+		^{Am}{ } Pour my life into a ^{Em}paper cup \\
+		^{Am}{ } The ashtray's full and I'm ^{Em}spillin' my guts \\
+		^{Am}{ } She wants to know am I ^{Em}still a slut \\
+		I've got to ^{G}take it on the ^{A*}otherside
+	\end{verse}
+
+	\begin{verse}
+		^{Am}{ } Scarlet starlet and she's ^{Em}in my bed \\
+		^{Am}{ } A candidate for a ^{Em}soul mate bled \\
+		^{Am}{ } Push the trigger and ^{Em}pull the thread \\
+		I've got to ^{G}take it on the ^{A}otherside \\
+		^{G}Take it on the ^{A}otherside \\
+		^{G*}Take it on, ^{A*}take it on \\
+	\end{verse}
+
+	\begin{chorus}
+		^{Am}{ } How long, how ^{F}long wil I ^{C}slide? \\
+		^{G}Separate my ^{Am}si- ^{F}-ide \\
+		I ^{C}don't, ^{G}don't believe it's ^{Am}ba ^{F}d \\
+		^{C}Slittin' my throat, it's ^{G}all I ever
+	\end{chorus}
+
+	\begin{interlude}
+		_Em* _C* \\
+		_Em* _C*
+	\end{interlude}
+
+	\begin{bridge}
+		^{Em*}{ } Turn me on take me for a hard ride \\
+		^{C*} Burn me out leave me on the otherside \\
+		^{Em*}{ } I yell and tell it that it's not my friend \\
+		^{C*} I tear it town I tear it down, and then it's born again
+	\end{bridge}
+
+	\begin{solo}
+		_{Am} _{F} _{C} _{G}
+	\end{solo}
+
+	\begin{chorus}
+		^{Am}{ } How long, how ^{F}long wil I ^{C}slide? \\
+		^{G}Separate my ^{Am}si- ^{F}-ide \\
+		I ^{C}don't, ^{G}don't believe it's ^{Am}ba ^{F}d \\
+		^{C}Slittin' my throat, it's ^{G}all I ever \\
+		^{Am}Ha- ^{F}-ad, I ^{C}don't, ^{G}don't believe it's ^{Am}sa- ^{F}-ad \\
+		^{C}Slittin' my throat, it's ^{G}all I ever ^{Am}
+	\end{chorus}
+
 \end{song}
 
 \end{document}
